@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST xfwm4-themes-4.5.92.tar.bz2 505442 RMD160 7d758a980657c17e2dd714a325c838ea8ba08848 SHA1 28edcc3187c2679dffaff9b54339904b73161eda SHA256 7bf7156591b9847e63909f359f7d989ea6ba443b43b19fef79e6655167f581b0
 DIST xfwm4-themes-4.5.93.tar.bz2 508558 RMD160 a343f275e4dc385fb9b65941df4b8b3244c6cc21 SHA1 b880bb00b9165893aeba6897e81848418ab6501b SHA256 4dd1f36d30cd3ec8a8341f2e848c8098d3f6471953322c832f838de8218189a7
+DIST xfwm4-themes-4.5.99.1.tar.bz2 502647 RMD160 ff4992c9ac28623b93e1dc062217d1a7ae424740 SHA1 8236559797d09b9fc512ba24c1fe16d5aa20aeca SHA256 c77fce9a29954fd45e928a2505300d978298b33f06013cad68ace8698c5aceef
 EBUILD xfwm4-themes-4.5.92.ebuild 383 RMD160 7ac0747108dfa382388296c74600af23314d046c SHA1 adc32d2e06bdaebcbbcc93bb74e82155c1a1d74b SHA256 cc5d32226461961e7b5a43438cdb04f614d66ea2259ea6549af4f4d4e6ce0b6f
 EBUILD xfwm4-themes-4.5.93.ebuild 383 RMD160 7ac0747108dfa382388296c74600af23314d046c SHA1 adc32d2e06bdaebcbbcc93bb74e82155c1a1d74b SHA256 cc5d32226461961e7b5a43438cdb04f614d66ea2259ea6549af4f4d4e6ce0b6f
+EBUILD xfwm4-themes-4.5.99.1.ebuild 383 RMD160 7ac0747108dfa382388296c74600af23314d046c SHA1 adc32d2e06bdaebcbbcc93bb74e82155c1a1d74b SHA256 cc5d32226461961e7b5a43438cdb04f614d66ea2259ea6549af4f4d4e6ce0b6f
 EBUILD xfwm4-themes-9999.ebuild 383 RMD160 7ac0747108dfa382388296c74600af23314d046c SHA1 adc32d2e06bdaebcbbcc93bb74e82155c1a1d74b SHA256 cc5d32226461961e7b5a43438cdb04f614d66ea2259ea6549af4f4d4e6ce0b6f
-MISC ChangeLog 488 RMD160 2ffe4006882ba1f52e5c2c10974ce955f3204b9b SHA1 be271c59f32ebc36d8e8d6a6775bf3e3ce861762 SHA256 ffe7892f9933e1fbd81da51633bc038ade4f33c95a6f1892c6e0aeef465f5043
+MISC ChangeLog 627 RMD160 8a6a58883097ed8ae9f837342182de93c171d6dc SHA1 1ee44fc4241be81f4757a0c78bc22d1d9e55a6de SHA256 b448caf8a796d4bd2666bbf6d05b7503de0affbec87e41e2682dd1ac0e58e70b
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEeoACgkQKhnDs22gwa+ZZwCg2mqItb6lE/ME/32A+H6rZXM0
-2MQAn2uRtOBRKW+4Rw2oKHkUKT4026Fy
-=5GgS
+iEYEARECAAYFAkl9xXcACgkQKhnDs22gwa8ekgCggNPax9OqW82lXaL2HbKXCKGu
+QAIAoOHDGuFiqpaJeI4isjdAW6cq3SZX
+=RAT7
 -----END PGP SIGNATURE-----
